# is_prime

./: Cargo.toml  README.md
benches/: speed.rs
src/: lib.rs  main.rs
