[package]
name = "is_prime"
version = "0.1.0"
authors = ["Galobtter <galobtter@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "speed"
harness = false